# Wbe3-TravelTrust

./: .env.example  .gitignore  Cargo.toml  PUSH_TO_GITHUB.md  README.md  package-lock.json  package.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yml  check-08-consistency.yml
contracts/: README.md  TrustLayerDispute.sol  TrustLayerEscrow.sol  TrustLayerReputation.sol  TrustLayerStaking.sol
crates/api/: Cargo.toml
crates/api/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: escrow.rs  lib.rs  reputation.rs  staking.rs  types.rs
crates/web/: Cargo.toml  Trunk.toml  index.html
crates/web/src/: lib.rs
crates/web/src/api/: mod.rs
crates/web/src/pages/: mod.rs
docs/: 00-文档索引.md  01-总库总览.md  02-架构设计.md  03-业务流程与风控.md  04-后端与API.md  05-前端总览.md  06-DApp架构总览.md  07-开发流程与顺序.md  08-0-系列审计-命名排序与合并瘦身.md  08-1-战略与合规风险检查清单.md  08-2-附录-闭合工单表.md  08-3-参数与门禁表.md  08-4-对外口径包.md  08-5-CI与一致性落地说明.md  多维度文档与技术检查报告.md  应提交与不应提交清单.md
evidence/: README.md
evidence/GO_YYYYMMDD_template/: README.txt  manifest.json
evidence/GO_placeholder/: README.txt
ops/: RUNBOOK.md
scripts/: build-frontend-manifest.sh  check-08-consistency.sh  check-ssot-deploy.sh  checklist-17.md  validate-evidence-manifest.sh
test/: TrustLayerDispute.test.js  TrustLayerEscrow.test.js  TrustLayerReputation.test.js  TrustLayerStaking.test.js
