[package]
name = "traveltrust-api"
version = "0.1.0"
edition = "2021"
description = "TravelTrust REST API (Axum)"

[[bin]]
name = "traveltrust-api"
path = "src/main.rs"

[dependencies]
traveltrust-core = { path = "../core" }
axum = { version = "0.7", features = ["json", "macros", "middleware"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
# tower-http: 若 build 报错 unknown feature "limit"/"timeout"，去掉该 feature 并删 main.rs 中对应 layer
tower-http = { version = "0.5", features = ["cors", "limit", "timeout"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
http-body-util = "0.1"
bytes = "1"
