[package]
name = "traveltrust-core"
version = "0.1.0"
edition = "2021"
description = "TravelTrust domain types, escrow/staking/reputation abstractions"

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
