[package]
name = "traveltrust-web"
version = "0.1.0"
edition = "2021"
description = "TravelTrust frontend (Yew / WASM)"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
traveltrust-core = { path = "../core" }
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"
gloo-net = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
